# athena

./: .env  .gitignore  README.md  constants.js  index.js  package-lock.json  package.json
client/: .env  package-lock.json  package.json  webpack.common.js  webpack.prod.js
client/src/: constants.js  index.html
client/src/components/Form/: Form.js
client/src/components/Sidebar/: Sidebar.js
client/src/components/Upload/: DropzoneArea.js  FileUploader.js  _DropzoneDialog.js
client/src/routes/home/: Home.js
client/src/services/: athena.service.js
client/src/styles/: index.css
python/: pyproject.toml
python/athena_package/: neural_style_transfer_tf_eager.py
python/tests/: test_athena_package.py
server/: server.js
server/__mocks__/: profile.mock.js  user.mock.js
server/controllers/: athena.controller.js  image.controller.js  images.controller.js
server/lib/: thumbnailGenerator.js
server/middleware/: filewatcher.js
server/routes/: athena.routes.js  image.routes.js  images.routes.js
server/services/: emailer.service.js  image.service.js
