[tool.poetry]
name = "athena"
version = "0.1.0"
description = "neural style transfer art generation"
authors = ["Gary Cooper <cooper.garym@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^1.12"
numpy = "^1.16"
scipy = "^1.2"
Pillow = "^5.4"
matplotlib = "^3.0"
ipython = "^7.2.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
